Changing the urls paths to comply with REST guidelines and not use verbs on the resources.
